list vs ndarray

--- a/lab_python/da01_numpy.ipynb
+++ b/lab_python/da01_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNLvZik/rAz5h6PXXVVumLL",
+      "authorship_tag": "ABX9TyOiZMuNPPk2RPVcxGvg7C3R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -92,13 +92,410 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Python `list` 클래스\n",
+        "\n",
+        "*   여러개의 값들을 저장할 수 있는 데이터 타입.\n",
+        "*   인덱스를 기반으로 한 데이터 타입.\n",
+        "    *   indexing: 인덱스를 사용해서 리스트의 특정 위치의 값을 참조. (예) `list[0]`\n",
+        "    *   slicing: [start, end) 인덱스 범위의 리스트를 잘라냄. (예) `list[0:5]`\n",
+        "*   산술 연산\n",
+        "    *   `list + list`: concatenate. 리스트 이어붙이기.\n",
+        "    *   `list * int, int * list`: replicate. 리스트의 원소들을 정수만큼 복사."
+      ],
+      "metadata": {
+        "id": "Ib8a6pFzI9CR"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numbers1 = [1, 2, 3]\n",
+        "numbers2 = [11, 22, 33]"
+      ],
       "metadata": {
         "id": "DuVJcCTKDzv4"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(numbers1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "paH7btPxKdGa",
+        "outputId": "40d00155-801b-4c5c-a452-0ad79d1ac1b2"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VLOrIv2_KfEw",
+        "outputId": "6d163f61-8808-4a8b-8bf1-5cd8ce9c6bbc"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[11, 22, 33]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# indexing\n",
+        "print(numbers1[0])  # 리스트의 첫번째 원소\n",
+        "print(numbers1[-1])  # 리스트의 마지막 원소"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XP4yx0uNKmuJ",
+        "outputId": "aa707a05-77f0-4887-8f52-23c274f62537"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# slicing\n",
+        "print(numbers2[:2])  # 리스트에서 첫 2개 원소들을 잘라내기\n",
+        "print(numbers2[-2:])  # 리스트에서 마지막 2개 원소들을 잘라내기"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DHXxx3zBLQ4i",
+        "outputId": "84d4e888-67f8-4318-8b9b-f01d04816789"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[11, 22]\n",
+            "[22, 33]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers1 + numbers2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i_RLPu1gLr9a",
+        "outputId": "e0d4f094-54cc-4393-8932-2191223a7ae5"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 11, 22, 33]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers1 * 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kVRBSHCRL32Z",
+        "outputId": "225a004e-aaf6-4efb-b639-9fa98394f5c6"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 1, 2, 3, 1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# numbers1과 numbers2의 같은 인덱스에 있는 원소들끼리 덧셈 --> 결과 [1+11, 2+22, 3+33]\n",
+        "[x + y for x, y in zip(numbers1, numbers2)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bR43RlKCMDeZ",
+        "outputId": "e9969880-6938-454a-cd87-85b9875ad635"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[12, 24, 36]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# numbers1의 모든 원소에 3을 곱함. --> 결과 [1*3, 2*3, 3*3]\n",
+        "[3 * x for x in numbers1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TOZbxxsJM13T",
+        "outputId": "5f02b5a8-e8ce-4b98-e3dd-867b6a80127a"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3, 6, 9]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# numbers1과 numbers2의 같은 인덱스에 있는 원소들끼리 곱셈 --> 결과 [1*11, 2*22, 3*33]\n",
+        "[x * y for x, y in zip(numbers1, numbers2)]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AxwkTcpGNVuA",
+        "outputId": "2c655253-b296-4fa5-cc80-9c4cdb87d379"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[11, 44, 99]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# NumPy(Numerical Python)\n",
+        "\n",
+        "*   다차원배열(n-dimensional array)을 쉽고 빠르게 연산(`+, -, *, /, ...`)하기 위한 패키지.\n",
+        "*   numpy 패키지의 대부분의 기능들(연산자, 함수, 메서드 등)은 반복문의 기능을 가지고 있음.\n",
+        "    *   같은 인덱스의 원소들끼리(element-wise) 연산하는 기능을 가지고 있음.\n",
+        "*   `numpy.ndarray` 클래스: numpy 패키지의 가장 기본이 되는 클래스.\n"
+      ],
+      "metadata": {
+        "id": "F0PtOR-4OjH4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_array1 = np.array([1, 2, 3, 4, 5])"
+      ],
+      "metadata": {
+        "id": "4VdVV_XROAfy"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(num_array1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ODWQB0KOQYDq",
+        "outputId": "51b8d4ee-73ad-4e7b-a9fd-6b495b235c77"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(num_array1)  # ndarray 클래스의 __str__() 메서드가 리턴하는 문자열을 출력"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5dlPzUlhQf3K",
+        "outputId": "4c7a6b4f-bbff-498b-da80-31dd98de1160"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_array1  # ndarray 클래스의 __repr__() 메서드가 리턴하는 문자열을 출력"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KmHFomHMQp9Z",
+        "outputId": "53114b7e-d1ec-4396-ea90-564ada80d2af"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_array2 = np.array([10, 20, 30, 40, 50])"
+      ],
+      "metadata": {
+        "id": "AZQtozHdQ4bD"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# element-wise(같은 인덱스의 원소들끼리) 연산\n",
+        "print(num_array1 + num_array2)  # [1+10, 2+20, 3+30, ...]\n",
+        "print(num_array1 - num_array2)  # [1-10, 2-20, 3-30, ...]\n",
+        "print(num_array1 * num_array2)  # [1*10, 2*20, 3*30, ...]\n",
+        "print(num_array1 * 3)\n",
+        "print(num_array1 / num_array2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OvdL-AW9RmSr",
+        "outputId": "f7bc72cf-cc0a-4ab8-96e6-7ae636730c2a"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[11 22 33 44 55]\n",
+            "[ -9 -18 -27 -36 -45]\n",
+            "[ 10  40  90 160 250]\n",
+            "[ 3  6  9 12 15]\n",
+            "[0.1 0.1 0.1 0.1 0.1]\n"
+          ]
+        }
+      ]
     }
   ]
 }
