numpy.ndarray attributes

--- a/lab_python/da01_numpy.ipynb
+++ b/lab_python/da01_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOiZMuNPPk2RPVcxGvg7C3R",
+      "authorship_tag": "ABX9TyPzjNNJsEwGAOcPTPitC497",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,9 +73,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UfkNGsh0DHtq",
-        "outputId": "56242794-9520-4f72-ac97-02aab5117f84"
+        "outputId": "bea4ae6e-b711-40d3-ad03-680de5c4b56c"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "DuVJcCTKDzv4"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -130,9 +130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "paH7btPxKdGa",
-        "outputId": "40d00155-801b-4c5c-a452-0ad79d1ac1b2"
+        "outputId": "3b9fca97-80ed-4774-b1c5-0271f4e06670"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,9 +153,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VLOrIv2_KfEw",
-        "outputId": "6d163f61-8808-4a8b-8bf1-5cd8ce9c6bbc"
+        "outputId": "5e910261-8893-490e-c639-a7c569069502"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +165,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -181,9 +181,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XP4yx0uNKmuJ",
-        "outputId": "aa707a05-77f0-4887-8f52-23c274f62537"
+        "outputId": "773a333f-fa5d-4e6c-ca36-480f0d4954d8"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DHXxx3zBLQ4i",
-        "outputId": "84d4e888-67f8-4318-8b9b-f01d04816789"
+        "outputId": "9253fa64-610d-4d54-ff63-3a7c5536001b"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,9 +231,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i_RLPu1gLr9a",
-        "outputId": "e0d4f094-54cc-4393-8932-2191223a7ae5"
+        "outputId": "991e2f0f-aa29-4290-db66-d3d0684e661a"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -243,7 +243,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -257,9 +257,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kVRBSHCRL32Z",
-        "outputId": "225a004e-aaf6-4efb-b639-9fa98394f5c6"
+        "outputId": "000f18bb-4c29-4dc1-c6cb-b717ba063180"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +269,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
@@ -284,9 +284,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bR43RlKCMDeZ",
-        "outputId": "e9969880-6938-454a-cd87-85b9875ad635"
+        "outputId": "f1ebb2a0-5349-460a-dd69-5a48ab84f158"
       },
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +296,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 10
         }
       ]
     },
@@ -311,9 +311,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TOZbxxsJM13T",
-        "outputId": "5f02b5a8-e8ce-4b98-e3dd-867b6a80127a"
+        "outputId": "86f926af-e283-48b5-a53a-6dee0be70344"
       },
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +323,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 11
         }
       ]
     },
@@ -338,9 +338,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AxwkTcpGNVuA",
-        "outputId": "2c655253-b296-4fa5-cc80-9c4cdb87d379"
+        "outputId": "949e3ff4-d868-4071-ed0f-d7df6fb2e022"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +350,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -376,7 +376,7 @@
       "metadata": {
         "id": "4VdVV_XROAfy"
       },
-      "execution_count": 17,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -389,9 +389,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ODWQB0KOQYDq",
-        "outputId": "51b8d4ee-73ad-4e7b-a9fd-6b495b235c77"
+        "outputId": "7f7ec53b-ec4c-4109-a439-f8c9922f471d"
       },
-      "execution_count": 18,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 14
         }
       ]
     },
@@ -415,9 +415,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5dlPzUlhQf3K",
-        "outputId": "4c7a6b4f-bbff-498b-da80-31dd98de1160"
+        "outputId": "298a60a0-7f3f-4edd-f9ff-5f84cc7854e0"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,9 +438,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KmHFomHMQp9Z",
-        "outputId": "53114b7e-d1ec-4396-ea90-564ada80d2af"
+        "outputId": "8bf0b272-dad6-4d39-d054-7c13192a4578"
       },
-      "execution_count": 20,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +450,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 16
         }
       ]
     },
@@ -462,7 +462,7 @@
       "metadata": {
         "id": "AZQtozHdQ4bD"
       },
-      "execution_count": 21,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -480,9 +480,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OvdL-AW9RmSr",
-        "outputId": "f7bc72cf-cc0a-4ab8-96e6-7ae636730c2a"
+        "outputId": "61a415f9-a2c0-4dcc-e333-0da4e0272c5f"
       },
-      "execution_count": 22,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -496,6 +496,270 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# `np.ndarry` 클래스의 속성들(attributes)"
+      ],
+      "metadata": {
+        "id": "AnT1T_Hn1S5x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(num_array1)\n",
+        "print('ndim =', num_array1.ndim)  # number of dimension(차원의 개수)\n",
+        "print('size =', num_array1.size)  # 배열의 크기(모든 원소의 개수)\n",
+        "print('shape =', num_array1.shape)  # 배열의 모양(배열의 각 차원의 원소 개수들로 이루어진 튜플)\n",
+        "print('dtype =', num_array1.dtype)  # data type(배열 원소의 데이터 타입)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_bbLFnDV1cPS",
+        "outputId": "b22591bd-3b80-4c8e-98c0-12987104b1e2"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4 5]\n",
+            "ndim = 1\n",
+            "size = 5\n",
+            "shape = (5,)\n",
+            "dtype = int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*   Python의 숫자 타입\n",
+        "    *   정수: int\n",
+        "    *   실수: float\n",
+        "*   NumPy의 숫자 타입\n",
+        "    *   정수: int8, int16, int32, int64, ...\n",
+        "    *   실수: float16, float32, float64, ..."
+      ],
+      "metadata": {
+        "id": "GdeYfygw3s5j"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2차원 배열\n",
+        "array = np.array([[1, 2, 3], [4, 5, 6]])"
+      ],
+      "metadata": {
+        "id": "1SwseoM41fNq"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h6uVMjZZ6FCT",
+        "outputId": "71cebc6e-cc1f-461d-9b62-b8724f30a883"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Whvbe_xE6HB6",
+        "outputId": "2ecaac64-2b64-4cb8-ede7-b900caa3d0eb"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2, 3],\n",
+              "       [4, 5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('ndim =', array.ndim)\n",
+        "print('size =', array.size)\n",
+        "print('shape =', array.shape)\n",
+        "print('dtype =', array.dtype)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nPtOGsix6PNS",
+        "outputId": "340fda34-7c1d-4326-b542-baad6187c442"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ndim = 2\n",
+            "size = 6\n",
+            "shape = (2, 3)\n",
+            "dtype = int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# `np.ndaray` 객체 생성 함수"
+      ],
+      "metadata": {
+        "id": "WpLjOFYB7ffT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `np.array(object)`\n",
+        "\n",
+        "*   object를 ndarray로 변환해서 리턴.\n",
+        "*   object: 배열과 비슷한 객체들. list, tuple, ndarray, ...\n"
+      ],
+      "metadata": {
+        "id": "Gm_NrZto7kau"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 0 이상 10 미만의 정수들로 이루어진 ndarray(배열)\n",
+        "numbers = np.array([x for x in range(10)])\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y_GOh_n06irE",
+        "outputId": "111c14c4-ac8d-4c44-84fd-bffd7a261565"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `np.arange(start, end, step)`\n",
+        "\n",
+        "*   range를 사용해서 array(배열)을 만들어 주는 함수.\n",
+        "*   파이썬 `range(start, end, step)` 함수 사용법과 같음.\n",
+        "*   1차원 배열(ndarray)를 생성.\n"
+      ],
+      "metadata": {
+        "id": "lqu4trMw8opw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 0 이상 10 미만의 정수들로 이루어진 ndarray(배열)\n",
+        "numbers = np.arange(10)\n",
+        "print(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3D8bCriB8hNs",
+        "outputId": "adb06e8f-16e5-4404-dea7-e95860d89712"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 0 이상 10 미만의 짝수들로만 이루어진 배열\n",
+        "evens = np.arange(0, 10, 2)\n",
+        "print(evens)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6RRt6jAL9ayy",
+        "outputId": "318fc9e5-569b-48f3-f368-856ebdd0a8c4"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 2 4 6 8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "4456gP0k9tlj"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
