array, arange, reshape, rand, randn

--- a/lab_python/da01_numpy.ipynb
+++ b/lab_python/da01_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPzjNNJsEwGAOcPTPitC497",
+      "authorship_tag": "ABX9TyNKMc4bxIhb+UZs308Ygdrw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -646,7 +646,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# `np.ndaray` 객체 생성 함수"
+        "# `np.ndarray` 객체 생성 함수"
       ],
       "metadata": {
         "id": "WpLjOFYB7ffT"
@@ -753,10 +753,262 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## reshape\n",
+        "\n",
+        "*   `np.reshape(array, newshape)` 함수(function)\n",
+        "*   `np.ndarray.reshape(newshape)` 메서드(method)\n"
+      ],
+      "metadata": {
+        "id": "ET8PnnksCyUj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.arange(12)\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4456gP0k9tlj",
+        "outputId": "5c562f94-e927-4546-be9d-69d36f188f97"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# reshape 함수\n",
+        "array2 = np.reshape(array, (3, 4))\n",
+        "print(array2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f1KpTWM1BWJk",
+        "outputId": "f52a1e89-efcd-4122-9440-23f9b52591dc"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# reshape 메서드\n",
+        "array3 = array.reshape((4, 3))\n",
+        "print(array3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pULyTsgwEeA9",
+        "outputId": "cd6bfce3-2d26-40af-c524-dc9d040497b7"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2]\n",
+            " [ 3  4  5]\n",
+            " [ 6  7  8]\n",
+            " [ 9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 함수(메서드) 연쇄 호출\n",
+        "array = np.arange(15).reshape((3, 5))\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xEgnVq_6FBld",
+        "outputId": "fdb19e2d-3f74-4d94-8aa1-cebf2f1b06b4"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3  4]\n",
+            " [ 5  6  7  8  9]\n",
+            " [10 11 12 13 14]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 난수 배열"
+      ],
+      "metadata": {
+        "id": "8U76HQ5IHkT6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `np.random.rand(d0, d1, d2, ...)`\n",
+        "\n",
+        "*   [0, 1) 범위의 균등분포(uniform distribution)를 따르는 난수들의 배열을 생성.\n",
+        "*   아규먼트(d0, d1, ...)들은 각 차원의 원소 개수.\n"
+      ],
+      "metadata": {
+        "id": "-_0zXbgLHpqY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.random.rand(5)\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZDMjPUkkHTRu",
+        "outputId": "8546b921-214e-4fcb-bf42-78dad8396256"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.7059186  0.49670141 0.55429566 0.28682001 0.83866209]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.random.rand(3, 4)\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oT1C0mopIhjm",
+        "outputId": "ee7c9f05-1edd-4cdd-8e7b-56621966ad94"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.86132681 0.44885425 0.48190096 0.17035509]\n",
+            " [0.91503803 0.86840444 0.93953952 0.53525229]\n",
+            " [0.71933849 0.15732418 0.25362417 0.51807044]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### `np.random.randn(d0, d1, d2, ...)`\n",
+        "\n",
+        "*   평균이 0이고 표준편차가 1인 표준정규분포(standard normal distribution)를 따르는 난수들의 배열을 생성.\n",
+        "*   아규먼트들(d0, d1, ...)은 각 차원의 원소 개수.\n"
+      ],
+      "metadata": {
+        "id": "cQyOgOlhJEld"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.random.randn(10)\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Op5HvyzqIoMU",
+        "outputId": "6a4f5ce8-bcf5-4ec3-89fc-3289fa90c679"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0.53847694 -1.15883101  1.62054699  0.7506609  -0.99722328  1.75784768\n",
+            " -1.94401755  0.60943229 -0.85272105 -0.83543363]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.random.randn(3, 5)\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8Ekp6WFIKPbf",
+        "outputId": "9155bd29-6a02-49f6-d804-e8ebc3d698ba"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-0.06802982  0.30567172  1.10742775 -1.26448558 -1.8907275 ]\n",
+            " [ 1.21749218  1.05510868 -0.1053397  -0.45763544  0.33405513]\n",
+            " [ 0.79653576  0.56867839 -0.67830488 -0.16466142 -0.07316103]]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "4456gP0k9tlj"
+        "id": "ejPk_zvQKl4W"
       },
       "execution_count": null,
       "outputs": []
