numpy 통계 함수, 메서드

--- a/lab_python/da01_numpy.ipynb
+++ b/lab_python/da01_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNKMc4bxIhb+UZs308Ygdrw",
+      "authorship_tag": "ABX9TyNQ9+Yl5wulMcBjbWT9+dGo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1005,10 +1005,296 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### `np.random.randint(low, high, size, dtype)`\n",
+        "\n",
+        "*   [low, high) 범위의 정수 난수들을 원소로 하는 배열을 생성.\n",
+        "*   파라미터 size: ndarray의 **shape**을 정수 또는 튜플로 전달.\n",
+        "*   파라미터 dtype: int8, int16, int32, int64, ...\n"
+      ],
+      "metadata": {
+        "id": "5RGNrsTzPzV-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.random.randint(0, 10, size=5)  # 파라미터 size에 정수를 전달 -> 1차원 배열\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ejPk_zvQKl4W",
+        "outputId": "78470a64-05a2-451f-fbf0-0f60e20c88a5"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[9 9 7 1 8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.random.randint(0, 10, size=(5,))  # shape이 (5,)인 1차원 배열\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oyxhR-NTRBNB",
+        "outputId": "71cad7c7-388d-4ab6-e280-a868370d804e"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2 2 4 8 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.random.randint(0, 10, size=(4, 5))  # shape이 (4, 5)인 2차원 배열\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5Zol4AkQRWuw",
+        "outputId": "03a0b29e-bfd8-4f46-864e-880fefb7a72d"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[2 9 7 8 7]\n",
+            " [8 3 8 2 5]\n",
+            " [4 1 9 5 2]\n",
+            " [0 7 6 3 3]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 통계 함수/메서드\n",
+        "\n",
+        "*   합계, 평균, 분산, 표준편차, 최댓값, 최솟값, ...\n",
+        "*   함수: `np.function_name(ndarray)`\n",
+        "*   메서드: `np.ndarray.method_name()`\n"
+      ],
+      "metadata": {
+        "id": "-oe0quYhSRPU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "array = np.random.randint(100, size=10)  # 0 이상 100 미만 10개의 정수 난수를 갖는 배열\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "opYtY98SRmIn",
+        "outputId": "73aead70-68a7-46a3-b9c2-8f4c06e53cfe"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[72  6  5 99 35 49 87 25  9 45]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('합계:', np.sum(array), array.sum())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XBrphLcNTdRQ",
+        "outputId": "64ed71fc-cef8-419b-a965-ae84b22603c6"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "합계: 432 432\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('평균:', np.mean(array), array.mean())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v6f5uIppT8QH",
+        "outputId": "0900d296-347b-4634-f219-b633e6e74c1c"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "평균: 43.2 43.2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('분산:', np.var(array), array.var())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E0OOfJc2UQVY",
+        "outputId": "b62a2dcc-3997-4807-825c-e555aca6951c"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "분산: 1030.9599999999998 1030.9599999999998\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('표준편차:', np.std(array), array.std())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0VkCvEocUfEI",
+        "outputId": "5f7aa5b1-60ab-4423-841b-cae564e36bbf"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "표준편차: 32.108565835303196 32.108565835303196\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('최댓값:', np.max(array), array.max())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fl6KmacDUvEA",
+        "outputId": "61015200-6aea-4c6c-98ba-822794cf82fe"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "최댓값: 99 99\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('최솟값:', np.min(array), array.min())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jN77-EgaVBKY",
+        "outputId": "1b29f164-bbbb-4d6c-8311-86875ebd1e47"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "최솟값: 5 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('중앙값:', np.median(array))  # 중앙값은 메서드가 제공되지 않음."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JVkZAFhPVJ2A",
+        "outputId": "cd016c2f-ec22-4b3a-bfe4-933e66d93c59"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "중앙값: 40.0\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ejPk_zvQKl4W"
+        "id": "EnGxWiw-WPPw"
       },
       "execution_count": null,
       "outputs": []
