--- a/lab_python/da07_read.ipynb
+++ b/lab_python/da07_read.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMq3fWUK2U86p/qULpjHg1C",
+      "authorship_tag": "ABX9TyPEM6nq/mcWCz0VqKDHl4K5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1335,28 +1335,13 @@
     {
       "cell_type": "code",
       "source": [
-        "ex3_df = pd.read_csv(ex3_path, sep='\\s+')"
+        "ex3_df = pd.read_csv(ex3_path, sep='\\\\s+')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hSEenfJvuZ7n",
-        "outputId": "f3693fe0-9ee5-4e57-e201-d2a28624aede"
+        "id": "hSEenfJvuZ7n"
       },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-            "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-            "/tmp/ipython-input-2177907763.py:1: SyntaxWarning: invalid escape sequence '\\s'\n",
-            "  ex3_df = pd.read_csv(ex3_path, sep='\\s+')\n"
-          ]
-        }
-      ]
+      "execution_count": 41,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1369,9 +1354,9 @@
           "height": 187
         },
         "id": "98ne8X7wuw93",
-        "outputId": "d79c23ac-b277-4bf7-95b0-c219ddf39f90"
+        "outputId": "55ceb3e5-c1f1-4ffa-ce02-f526a05e35fb"
       },
-      "execution_count": 28,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1385,7 +1370,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c2dfe2a7-c61c-43b1-a695-4413262145bf\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bf6efd92-75cf-4b06-bd5e-c1c07f355721\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1440,7 +1425,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c2dfe2a7-c61c-43b1-a695-4413262145bf')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf6efd92-75cf-4b06-bd5e-c1c07f355721')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1492,12 +1477,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c2dfe2a7-c61c-43b1-a695-4413262145bf button.colab-df-convert');\n",
+              "        document.querySelector('#df-bf6efd92-75cf-4b06-bd5e-c1c07f355721 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c2dfe2a7-c61c-43b1-a695-4413262145bf');\n",
+              "        const element = document.querySelector('#df-bf6efd92-75cf-4b06-bd5e-c1c07f355721');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1517,8 +1502,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-cc05120b-20ea-48bf-8b3a-86dc28acf934\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cc05120b-20ea-48bf-8b3a-86dc28acf934')\"\n",
+              "    <div id=\"df-f7cfccc9-823f-462d-84a6-743764a7ba94\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f7cfccc9-823f-462d-84a6-743764a7ba94')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -1637,14 +1622,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-cc05120b-20ea-48bf-8b3a-86dc28acf934 button');\n",
+              "            document.querySelector('#df-f7cfccc9-823f-462d-84a6-743764a7ba94 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_a90a046e-df73-4ad8-882b-2eb5f53665ca\">\n",
+              "  <div id=\"id_08425792-b9bf-4e3a-a468-4dc09bf89b52\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1688,7 +1673,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_a90a046e-df73-4ad8-882b-2eb5f53665ca button.colab-df-generate');\n",
+              "        document.querySelector('#id_08425792-b9bf-4e3a-a468-4dc09bf89b52 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1709,7 +1694,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 42
         }
       ]
     },
@@ -1723,9 +1708,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SQeV0cfcu4Hn",
-        "outputId": "7fdd4be4-a9f8-4c2a-cc28-649f5dc0c2a4"
+        "outputId": "3b03a554-aee5-43d3-ff2a-9bef7326bd24"
       },
-      "execution_count": 29,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
