--- a/lab_ml/ml01_numpy.ipynb
+++ b/lab_ml/ml01_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOtDi9oORs2nS5Nvs1VCjBg",
+      "authorship_tag": "ABX9TyN3QktuzoG8oLte2No3YWnB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -461,6 +461,591 @@
       "metadata": {
         "id": "PB-Kq9-Z9Ogp"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Slicing\n",
+        "\n",
+        "배열을 잘라서 새로운 배열을 만듦."
+      ],
+      "metadata": {
+        "id": "SVYTr4FKDZyW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1d array의 slicing"
+      ],
+      "metadata": {
+        "id": "7CNOVa66DjiY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = np.arange(10)\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ETqMZUfuDpAi",
+        "outputId": "3021f57c-3187-46c5-bfbe-3f8ad1084970"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5 6 7 8 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[1:5])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_Qz_G8NxDvkF",
+        "outputId": "82ad8fbd-df63-43cd-affe-b124c4c9c215"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:3])  # 시작 인덱스 0은 생략 가능"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FmR59QLqEG23",
+        "outputId": "734fb421-e583-45e7-ca4a-7a9947cddedc"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[-3:])  # 배열의 끝까지 자를 때는 마지막 인덱스를 생략할 수 있음."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4aZv7ivXEKwz",
+        "outputId": "6b4f9500-ad48-49f4-baa6-962a33d4ae97"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[7 8 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[0:1])  #> slicing --> 배열(ndarray)\n",
+        "print(arr[0])  #> indexing --> 배열의 원소"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6Yxansz4EO9C",
+        "outputId": "cd5211e3-5eb7-46e6-d2bb-45e2d9d9ab17"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0]\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2d array의 slicing"
+      ],
+      "metadata": {
+        "id": "hTnczKoMFKWE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = np.arange(1, 21).reshape((4, 5))\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Sv7wO0ZLFNi1",
+        "outputId": "a786ab6d-b806-46de-ba86-0eda702b7d6d"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3  4  5]\n",
+            " [ 6  7  8  9 10]\n",
+            " [11 12 13 14 15]\n",
+            " [16 17 18 19 20]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lcJAks4fFT79",
+        "outputId": "6262dc8a-616e-44cb-b505-d231ed155618"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3  4  5]\n",
+            " [ 6  7  8  9 10]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:2, :])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hPwZVyqvFvjd",
+        "outputId": "b78bd30c-3c0f-4e65-ef0e-1e90907ae89c"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3  4  5]\n",
+            " [ 6  7  8  9 10]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:2, :3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fs3LATYbGDwS",
+        "outputId": "5ea4bb48-b941-4f26-edae-be6f3309b9c6"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [6 7 8]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[1:3, 1:4])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G5QXAMEbGUZw",
+        "outputId": "9309f2b7-a733-4466-e754-6cc2ed49c8eb"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 7  8  9]\n",
+            " [12 13 14]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:3, :2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nE0gDUajHRjF",
+        "outputId": "8382b744-82af-4d65-c099-dc8f5c0e0255"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2]\n",
+            " [ 6  7]\n",
+            " [11 12]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gLsLA4AWGbBL",
+        "outputId": "87c8fc8f-4433-45c8-ec5f-e18854e1267d"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3  4  5]\n",
+            " [ 6  7  8  9 10]\n",
+            " [11 12 13 14 15]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:3][:2])  # arr[:3, :2]의 결과와 다름!"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p7bbMUJ-G1ey",
+        "outputId": "6cba3f3a-8662-40ae-bcb3-6912ad31105d"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 1  2  3  4  5]\n",
+            " [ 6  7  8  9 10]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 3d array의 slicing"
+      ],
+      "metadata": {
+        "id": "lv9ZRYqMIXSV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = np.arange(60).reshape((3, 4, 5))\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S7iBnXIeIeCL",
+        "outputId": "15b88ff6-fd57-4dd8-9e10-4161aa432a57"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1  2  3  4]\n",
+            "  [ 5  6  7  8  9]\n",
+            "  [10 11 12 13 14]\n",
+            "  [15 16 17 18 19]]\n",
+            "\n",
+            " [[20 21 22 23 24]\n",
+            "  [25 26 27 28 29]\n",
+            "  [30 31 32 33 34]\n",
+            "  [35 36 37 38 39]]\n",
+            "\n",
+            " [[40 41 42 43 44]\n",
+            "  [45 46 47 48 49]\n",
+            "  [50 51 52 53 54]\n",
+            "  [55 56 57 58 59]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pXztcWZ1IoGD",
+        "outputId": "bd8d864a-9807-4966-e6de-8aff49d0a362"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1  2  3  4]\n",
+            "  [ 5  6  7  8  9]\n",
+            "  [10 11 12 13 14]\n",
+            "  [15 16 17 18 19]]\n",
+            "\n",
+            " [[20 21 22 23 24]\n",
+            "  [25 26 27 28 29]\n",
+            "  [30 31 32 33 34]\n",
+            "  [35 36 37 38 39]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:2, :, :])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vkJEqH3HI8qU",
+        "outputId": "64dcf5a1-bb04-4689-f660-82066be0fc0b"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1  2  3  4]\n",
+            "  [ 5  6  7  8  9]\n",
+            "  [10 11 12 13 14]\n",
+            "  [15 16 17 18 19]]\n",
+            "\n",
+            " [[20 21 22 23 24]\n",
+            "  [25 26 27 28 29]\n",
+            "  [30 31 32 33 34]\n",
+            "  [35 36 37 38 39]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:2, :2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pKh9bu68JJy0",
+        "outputId": "e208a2d1-a04a-4914-86b9-56c3c73cd26d"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1  2  3  4]\n",
+            "  [ 5  6  7  8  9]]\n",
+            "\n",
+            " [[20 21 22 23 24]\n",
+            "  [25 26 27 28 29]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:2, :2, :])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ng3iZ7deJS_7",
+        "outputId": "20907e9e-e55a-48b3-8342-d6bc392d6b1b"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1  2  3  4]\n",
+            "  [ 5  6  7  8  9]]\n",
+            "\n",
+            " [[20 21 22 23 24]\n",
+            "  [25 26 27 28 29]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:2, :2, :2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FvJxjvxqKGNL",
+        "outputId": "f087bc63-dfad-423f-9bfa-12bd03938000"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1]\n",
+            "  [ 5  6]]\n",
+            "\n",
+            " [[20 21]\n",
+            "  [25 26]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[:1, :, :])  #> 3d array"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zGYsCPvgKlGq",
+        "outputId": "e9a964bc-d2bc-4aed-8c31-6a3eddd553e0"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1  2  3  4]\n",
+            "  [ 5  6  7  8  9]\n",
+            "  [10 11 12 13 14]\n",
+            "  [15 16 17 18 19]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr[0, :, :])  # 2d array. arr[:1, :, :]와 다름!"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QkY2tK1dKRts",
+        "outputId": "6d6aff0e-b44e-40e0-a7ae-350743f20944"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3  4]\n",
+            " [ 5  6  7  8  9]\n",
+            " [10 11 12 13 14]\n",
+            " [15 16 17 18 19]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
