--- a/lab_ml/ml01_numpy.ipynb
+++ b/lab_ml/ml01_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN3QktuzoG8oLte2No3YWnB",
+      "authorship_tag": "ABX9TyORcnz6PbwnV57tOmNbpp2h",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1024,7 +1024,7 @@
     {
       "cell_type": "code",
       "source": [
-        "print(arr[0, :, :])  # 2d array. arr[:1, :, :]와 다름!"
+        "print(arr[0, :, :])  #> 2d array. arr[:1, :, :]와 다름!"
       ],
       "metadata": {
         "colab": {
@@ -1043,6 +1043,655 @@
             " [ 5  6  7  8  9]\n",
             " [10 11 12 13 14]\n",
             " [15 16 17 18 19]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 배열 모양(shape) 변경\n",
+        "\n",
+        "*   `reshape()`\n",
+        "*   `ravel()`\n",
+        "*   `flatten()`\n",
+        "*   `np.newaxis` 속성\n"
+      ],
+      "metadata": {
+        "id": "e6NM2FX1PQOA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## reshape"
+      ],
+      "metadata": {
+        "id": "7kdbGDkkPuOz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_1d = np.arange(12)\n",
+        "print(arr_1d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gHt1_1x4PvYV",
+        "outputId": "77bb938f-6b24-4de4-d9f6-29885158e12a"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# arr_1d를 (4, 3) shape의 2d array로 변환\n",
+        "arr_2d = arr_1d.reshape((4, 3))\n",
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Le8Q9O8gP3yt",
+        "outputId": "e6a72307-f27b-4fcd-ec09-909cb6b1df9d"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2]\n",
+            " [ 3  4  5]\n",
+            " [ 6  7  8]\n",
+            " [ 9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# reshape 메서드에 아규먼트를 전달할 때, 자동으로 계산할 수 있는 차원의 값은 -1을 사용할 수 있음.\n",
+        "arr_2d = arr_1d.reshape((4, -1))  # (4, 3)\n",
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YlX-9_-JQQq1",
+        "outputId": "c6f47031-79c9-46e5-a12c-a8ab1d5c867e"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2]\n",
+            " [ 3  4  5]\n",
+            " [ 6  7  8]\n",
+            " [ 9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_2d = arr_1d.reshape((-1, 4))  # (3, 4)\n",
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4X_fKvsCQq_l",
+        "outputId": "2dd75baa-d4c2-453f-c88b-952344ca4fc6"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_1d = np.arange(24)\n",
+        "print(arr_1d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hLR0bVspQ-Q1",
+        "outputId": "fa3a7b82-f493-49bb-d46b-971a5fd76c0d"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# arr_1d를 (2, 3, 4) 모양의 3d array로 변환\n",
+        "arr_3d = arr_1d.reshape((2, 3, 4))\n",
+        "print(arr_3d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gMC9-66kRlRl",
+        "outputId": "c032f05e-b673-4181-f388-5fc64aaef9c4"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1  2  3]\n",
+            "  [ 4  5  6  7]\n",
+            "  [ 8  9 10 11]]\n",
+            "\n",
+            " [[12 13 14 15]\n",
+            "  [16 17 18 19]\n",
+            "  [20 21 22 23]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_3d = arr_1d.reshape((2, 3, -1))\n",
+        "print(arr_3d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mHe29lSoR5a1",
+        "outputId": "49d37ff3-7986-4d1c-a8d3-e39c536db8ba"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1  2  3]\n",
+            "  [ 4  5  6  7]\n",
+            "  [ 8  9 10 11]]\n",
+            "\n",
+            " [[12 13 14 15]\n",
+            "  [16 17 18 19]\n",
+            "  [20 21 22 23]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_3d = arr_1d.reshape((-1, 3, 4))\n",
+        "print(arr_3d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2izqvUkASK4t",
+        "outputId": "3252436d-27fb-4dcb-8fc4-d08a3f206003"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 0  1  2  3]\n",
+            "  [ 4  5  6  7]\n",
+            "  [ 8  9 10 11]]\n",
+            "\n",
+            " [[12 13 14 15]\n",
+            "  [16 17 18 19]\n",
+            "  [20 21 22 23]]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ravel vs flatten\n",
+        "\n",
+        "*   ravel\n",
+        "    *   n차원 배열을 1차원 배열로 변환한 \"뷰(view)\"를 리턴.\n",
+        "    *   새로운 1차원 배열을 만드는 것이 아니라, 원본 배열의 모양을 1차원처럼 보여줄 뿐.\n",
+        "    *   리턴된 1차원 배열에서 원소를 변경하면, 원본 배열도 변경됨!\n",
+        "*   flatten\n",
+        "    *   n차원 배열을 1차원 배열로 변환한 \"복사본(copy)\"을 리턴.\n",
+        "    *   원본 배열과는 별개의 새로운 1차원 배열을 메모리에 만들어서 리턴.\n",
+        "    *   리턴된 1차원 배열의 원소를 변경하는 것은 원본 배열에 영향을 주지 않음!\n"
+      ],
+      "metadata": {
+        "id": "J6Gvk_WXS0gB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_2d = np.arange(12).reshape((3, 4))\n",
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3p2PC20RULJf",
+        "outputId": "bd1a3be8-e48e-40c1-8344-5457d9f1a512"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flattened = arr_2d.flatten()  # 2d --> 1d\n",
+        "print(flattened)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JDxFJd7LSigd",
+        "outputId": "61f8918d-8cb9-4bd7-b5dc-68d481596be1"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flattened[0] = 123\n",
+        "print(flattened)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LdfV_8wlUp6u",
+        "outputId": "5569f283-bae9-45e0-95a9-1821d98a560c"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[123   1   2   3   4   5   6   7   8   9  10  11]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr_2d)  # 원본 2d array은 변경되지 않음."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lGFN3hIvU8lO",
+        "outputId": "565e74ca-f7ef-48e7-9184-83bf05c32525"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "raveled = arr_2d.ravel()  # 2d --> 1d\n",
+        "print(raveled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xtuGBlE1VFg-",
+        "outputId": "c0017a9d-3c20-4570-976c-ff0763f3fdb8"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "raveled[0] = 123\n",
+        "print(raveled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iqfSEHk8Vkem",
+        "outputId": "f6479229-3dc4-428d-a016-b1b96120900b"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[123   1   2   3   4   5   6   7   8   9  10  11]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr_2d)  # 원본 2d array이 변경됨!"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qu4b78hrVnx9",
+        "outputId": "1cc83e78-2627-48e8-ebc6-bc95bed55a32"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[123   1   2   3]\n",
+            " [  4   5   6   7]\n",
+            " [  8   9  10  11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `np.newaxis` 속성을 사용한 차원 늘리기"
+      ],
+      "metadata": {
+        "id": "xTSOMUeHWQdR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr = np.arange(6)\n",
+        "print(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ITEv8p-YVxuW",
+        "outputId": "69e19c36-0cba-4a0d-9321-e4ffeb2f3e79"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "X8nsanVRXDXH",
+        "outputId": "d97531c3-6e79-48a2-d38d-0a5f686ec278"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(6,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = arr[np.newaxis, :]\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bf_oZwhCXGZv",
+        "outputId": "559cdb42-af85-45ce-f323-153d02fa52f5"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2 3 4 5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0plpcxm6XSfu",
+        "outputId": "1f19d073-71d7-4f6d-ef34-6931faf3f455"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 6)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr.reshape((1, -1)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HbgUT8oSYfVc",
+        "outputId": "09398b23-f78a-4d6a-8b69-2d57cfefc229"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2 3 4 5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = arr[:, np.newaxis]\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kBNTDDdvXVK9",
+        "outputId": "6c43743c-2fe6-492e-8eb8-9548f652df47"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0]\n",
+            " [1]\n",
+            " [2]\n",
+            " [3]\n",
+            " [4]\n",
+            " [5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gF3oFVwwX93H",
+        "outputId": "b4f6f97c-26e2-4333-b98e-852c1849064f"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(6, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr.reshape((-1, 1)))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N_KuSjhrYAh3",
+        "outputId": "20fbad41-fb62-49a1-fada-18c598f8dcff"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0]\n",
+            " [1]\n",
+            " [2]\n",
+            " [3]\n",
+            " [4]\n",
+            " [5]]\n"
           ]
         }
       ]
